# MGet

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/mget/: download_options.rs  downloader.rs  mod.rs
