[package]
name = "mget"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/tusik/MGet"
authors = ["Image <image@by.cx>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["net","rt","rt-multi-thread","io-std","macros","sync","fs"] }
bytes = { version = "1", features = ["serde"] }
indicatif = "0.16.2"
futures = "0.3"
url = "2.2.2"
num_cpus = "1.13.1"